IDEA-105755 -Djava.endorsed.dirs doesn't work with external build